2007-06-20  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/contour/ContourDataset.java: Removed,
	* source/org/jfree/data/contour/DefaultContourDataset.java: Removed,
	* source/org/jfree/data/contour/NonGridContourDataset.java: Removed,
	* source/org/jfree/data/contour/package.html: Removed.
	
2007-06-20  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/category/DefaultIntervalCategoryDataset.java
	(getSeries): Removed,
	(getCategories): Likewise,
	(getItemCount): Likewise.

2007-06-20  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/title/LegendItemBlockContainer.java
	(datasetIndex): Removed,
	(series): Removed,
	(LegendItemBlockContainer(Arrangement, int, int)): Removed,
	(getDatasetIndex): Removed,
	(getSeriesIndex): Removed.

2007-06-20  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/cahrt/renderer/LookupPaintScale.java
	(add(Number, Paint)): Removed,
	* tests/org/jfree/chart/renderer/junit/LookupPaintScaleTests.java:
	Updated for deprecated code removal,
	* tests/org/jfree/chart/renderer/xy/junit/XYBlockRendererTests.java:
	Likewise.

2007-06-20  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/AbstractRenderer.java
	(seriesVisible): Removed,
	(seriesVisibleInLegend): Likewise,
	(paint): Likewise,
	(fillPaint): Likewise,
	(outlinePaint): Likewise,
	(stroke): Likewise,
	(outlineStroke): Likewise,
	(shape): Likewise,
	(itemLabelsVisible): Likewise,
	(itemLabelFont): Likewise,
	(itemLabelPaint): Likewise,
	(positiveItemLabelPosition): Likewise,
	(negativeItemLabelPosition): Likewise,
	(createEntities): Likewise,
	(AbstractRenderer()): Updated for removed fields,
	(isSeriesVisible): Likewise,
	(getSeriesVisible): Removed,
	(setSeriesVisible(Boolean): Likewise,
	(setSeriesVisible(Boolean, boolean): Likewise,
	(isSeriesVisibleInLegend): Updated for removed fields,
	(getSeriesVisibleInLegend): Removed,